School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/unary_expr.deca
//test d'un entier négatif, expression unaire (UnaryMinus)
//test de l'opérateur not avec une expression booléenne
{
    int i = -1;
    if(!(1>2)){
        println("ok", i);
    }
}