School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_If_While/not_int.deca
//test de l'opérateur not sur un int
//erreur attendue : ça casse

{
    if(!(1)){
        println("salut");
    }
}